--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,11 @@ name = "tree-sitter-css"
 description = "CSS grammar for tree-sitter"
 version = "0.20.0"
 authors = [
-	"Max Brunsfeld <maxbrunsfeld@gmail.com>",
-	"Amaan Qureshi <amaanq12@gmail.com>",
+  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
+  "Amaan Qureshi <amaanq12@gmail.com>",
 ]
 license = "MIT"
-readme = "bindings/rust/README.md"
-keywords = ["incremental", "parsing", "css"]
+keywords = ["incremental", "parsing", "tree-sitter", "css"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/tree-sitter/tree-sitter-css"
 edition = "2021"
@@ -21,7 +20,7 @@ include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "~0.20.10"
+tree-sitter = ">=0.21.0"
 
 [build-dependencies]
-cc = "~1.0"
+cc = "1.0.96"
