--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tree-sitter-css"
-description = "Css grammar for tree-sitter"
-version = "0.0.1"
+description = "CSS grammar for tree-sitter"
+version = "0.21.0"
 keywords = ["incremental", "parsing", "tree-sitter", "css"]
 classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Software Development :: Compilers",
   "Topic :: Text Processing :: Linguistic",
-  "Typing :: Typed"
+  "Typing :: Typed",
 ]
 authors = [
   { name = "Max Brunsfeld", email = "maxbrunsfeld@gmail.com" },
